# windows-service-rs

./: Cargo.toml
examples/: list_service.rs
src/: lib.rs  service.rs  service_control_handler.rs  service_manager.rs
