[package]
name = "windows-service"
version = "0.1.0"
description = "A crate that provides facilities for management and implementation of windows services"
readme = "README.md"
authors = ["Mullvad VPN <admin@mullvad.net>", "Andrej Mihajlov <and@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
keywords = ["windows", "service", "daemon"]
categories = ["api-bindings"]
repository = "https://github.com/mullvad/windows-service-rs"
license = "MIT/Apache-2.0"

[target.'cfg(windows)'.dependencies]
bitflags = "1.0.1"
error-chain = { version= "0.11", features = [], default-features=false}
winapi = { version = "0.3", features = ["std", "winsvc", "winerror"] }
widestring = "0.3.0"
lazy_static = "1.0"
serde = "1.0.66"
serde_json = "1.0.19"
serde_derive = "1.0.66"
flate2 = "1.0"
